// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Scorecard CSV column-name stability > full header row matches the golden snapshot 1`] = `
[
  "Supplier Name",
  "Current Tier",
  "Delivery Performance Score (/100)",
  "Quality Score (/100)",
  "Cost Competitiveness Score (/100)",
  "Compliance Score (/100)",
  "Innovation Score (/100)",
  "Relationship Quality Score (/100)",
  "Delivery Performance — OTIF %",
  "Delivery Performance — Lead Time Adherence %",
  "Delivery Performance — Fill Rate %",
  "Delivery Performance — Low Expedite Rate score",
  "Quality — Low Defect / Rejection Rate score",
  "Quality — First-Time-Right %",
  "Quality — Quality Cert Compliance %",
  "Quality — Low Non-conformances score",
  "Cost Competitiveness — Price vs Market Benchmark (savings score)",
  "Cost Competitiveness — Invoice Accuracy %",
  "Cost Competitiveness — Cost Reduction YoY score",
  "Cost Competitiveness — TCO Transparency Score",
  "Compliance — Regulatory Compliance %",
  "Compliance — ESG Audit Score",
  "Compliance — Document Completeness %",
  "Compliance — Ethical Trading Score",
  "Innovation — Ideas Submitted score",
  "Innovation — Implemented Suggestions %",
  "Innovation — Technology Readiness Score",
  "Relationship Quality — Responsiveness Score",
  "Relationship Quality — Issue Resolution Speed score",
  "Relationship Quality — Collaboration Score",
  "Weighted Score (/100)",
  "Calculated Tier",
]
`;

exports[`Scorecard CSV column-name stability > sub-indicator column names match the golden snapshot 1`] = `
[
  "Delivery Performance — OTIF %",
  "Delivery Performance — Lead Time Adherence %",
  "Delivery Performance — Fill Rate %",
  "Delivery Performance — Low Expedite Rate score",
  "Quality — Low Defect / Rejection Rate score",
  "Quality — First-Time-Right %",
  "Quality — Quality Cert Compliance %",
  "Quality — Low Non-conformances score",
  "Cost Competitiveness — Price vs Market Benchmark (savings score)",
  "Cost Competitiveness — Invoice Accuracy %",
  "Cost Competitiveness — Cost Reduction YoY score",
  "Cost Competitiveness — TCO Transparency Score",
  "Compliance — Regulatory Compliance %",
  "Compliance — ESG Audit Score",
  "Compliance — Document Completeness %",
  "Compliance — Ethical Trading Score",
  "Innovation — Ideas Submitted score",
  "Innovation — Implemented Suggestions %",
  "Innovation — Technology Readiness Score",
  "Relationship Quality — Responsiveness Score",
  "Relationship Quality — Issue Resolution Speed score",
  "Relationship Quality — Collaboration Score",
]
`;
